[package]
name = "gridiron-pair"
version = "1.5.0"
authors = ["Gridiron"]
edition = "2021"
description = "The Gridiron constant product pool contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
integer-sqrt = "0.1"
gridiron = { path = "../../packages/gridiron", version = "3" }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"

[dev-dependencies]
gridiron-token = { path = "../token" }
gridiron-factory = { path = "../factory" }
proptest = "1.0"
prost = "0.11.5"
gridiron-mocks = { path = "../../packages/gridiron_mocks/" }
