[package]
name = "gridiron-pair-concentrated"
version = "2.3.0"
authors = ["Gridiron"]
edition = "2021"
description = "The Gridiron concentrated liquidity pair"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
gridiron = { path = "../../packages/gridiron", version = "3" }
gridiron-factory = { path = "../factory", features = [
    "library",
], version = "1" }
gridiron-circular-buffer = { path = "../../packages/circular_buffer", version = "0.1" }
gridiron-pcl-common = { path = "../../packages/gridiron_pcl_common", version = "1" }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = "1.0"
cosmwasm-schema = "1.1"
itertools = "0.10"
cw-utils = "0.15"
gridiron-pair-concentrated_v1 = { package = "gridiron-pair-concentrated", version = "1.2.13", features = ["library"] }

[dev-dependencies]
gridiron-token = { path = "../token" }
gridiron-mocks = { path = "../../packages/gridiron_mocks/" }
gridiron-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
gridiron-native-coin-registry = { path = "../periphery/native_coin_registry" }
