[package]
name = "gridiron-pair-concentrated-injective"
version = "2.2.2"
authors = ["Gridiron"]
edition = "2021"
description = "The Gridiron concentrated liquidity pair which supports Injective orderbook integration"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
gridiron = { path = "../../packages/gridiron", version = "3", features = ["injective"] }
gridiron-factory = { path = "../factory", features = ["library"], version = "1" }
gridiron-pair-concentrated = { path = "../pair_concentrated", features = ["library"], version = "2.0.5" }
gridiron-circular-buffer = { path = "../../packages/circular_buffer", version = "0.1" }
gridiron-pcl-common = { path = "../../packages/gridiron_pcl_common", version = "1" }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = "1.0"
cosmwasm-schema = "1.1"
itertools = "0.10"
cw-utils = "0.15"
injective-cosmwasm = "0.2"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"

[dev-dependencies]
gridiron-token = { path = "../token" }
gridiron-mocks = { path = "../../packages/gridiron_mocks" }
gridiron-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
gridiron-native-coin-registry = { path = "../periphery/native_coin_registry" }
injective-math = "0.1"
injective-testing = "0.1.1"
