[package]
name = "gridiron-token"
version = "1.1.1"
authors = ["Gridiron"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Gridiron GRID token"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
gridiron = { path = "../../packages/gridiron", version = "3" }
cw2 = "0.15"
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = { version = "1.1" }
snafu = { version = "0.6" }
cosmwasm-schema = { version = "1.1" }
