[package]
name = "gridiron-liquidity-manager"
version = "1.0.3"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "1.0"
cw20 = "0.15"
thiserror = "1.0"
gridiron = { path = "../../../packages/gridiron", version = "3" }
cw20-base = { version = "0.15", features = ["library"] }
gridiron-pair = { path = "../../pair", features = ["library"], version = "1" }
gridiron-pair-stable = { path = "../../pair_stable", features = ["library"], version = "3" }
gridiron-factory = { path = "../../factory", features = ["library"], version = "1" }

[dev-dependencies]
cw-multi-test = "0.16.4"
gridiron-token = { path = "../../token" }
gridiron-native-coin-registry = { path = "../../periphery/native_coin_registry" }
gridiron-generator = { path = "../../tokenomics/generator" }
gridiron-whitelist = { path = "../../whitelist" }
serde_json = "1.0.96"
anyhow = "1"
derivative = "2.2"
itertools = "0.10"
