[package]
name = "gridiron-oracle"
version = "2.1.1"
authors = ["Gridiron"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
cw2 = "0.15"
cw20 = "0.15"
gridiron = { path = "../../../packages/gridiron", version = "3" }
cosmwasm-schema = { version = "1.1" }

[dev-dependencies]
gridiron-token = { path = "../../token" }
gridiron-factory = { path = "../../factory" }
gridiron-pair = { path = "../../pair" }
gridiron-pair-stable = { path = "../../pair_stable" }
cw-multi-test = "0.15"
itertools = "0.10"
anyhow = "1.0"
gridiron-native-coin-registry = { path = "../../periphery/native_coin_registry" }
