[package]
name = "gridiron-shared-multisig"
version = "1.0.0"
authors = ["Gridiron, Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1"
cw-utils = "1.0"
cw2 = "1.0"
cw3 = "1.0"
cw20 = "0.15"
cw-storage-plus = "0.15"
cosmwasm-std = "1.1"
thiserror = "1.0"
itertools = "0.10"
gridiron = { path = "../../../packages/gridiron", version = "3" }

[dev-dependencies]
gridiron-mocks = { path = "../../../packages/gridiron_mocks"}
gridiron-pair = { path = "../../pair" }
gridiron-pair-concentrated = { path = "../../pair_concentrated" }
gridiron-generator = { path = "../../tokenomics/generator" }