[package]
name = "gridiron-generator"
version = "2.3.2"
authors = ["Gridiron"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw-storage-plus = "0.15"
cw1-whitelist = { version = "0.15", features = ["library"] }
thiserror = { version = "1.0" }
gridiron-governance = { git = "https://github.com/gridironzone/gridiron-governance", version = "1" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-std = "1.1"
cw2 = "0.15"
cw20 = "0.15"
gridiron = { path = "../../../packages/gridiron", version = "3" }
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"

[dev-dependencies]
generator-controller = { git = "https://github.com/gridironzone/gridiron-governance" }
gridiron-mocks = { path = "../../../packages/gridiron_mocks" }
gridiron-token = { path = "../../token" }
gridiron-vesting = { path = "../vesting" }
gridiron-staking = { path = "../staking" }
gridiron-factory = { path = "../../factory" }
gridiron-pair = { path = "../../pair" }
gridiron-pair-stable = { path = "../../pair_stable" }
gridiron-whitelist = { path = "../../whitelist" }
anyhow = "1"
voting-escrow = { git = "https://github.com/gridironzone/gridiron-governance" }
voting-escrow-delegation = { git = "https://github.com/gridironzone/gridiron-governance" }
gridiron-nft = { git = "https://github.com/gridironzone/gridiron-governance" }
cw721-base = { version = "0.15", features = ["library"] }
generator-proxy-to-vkr = { git = "https://github.com/gridironzone/grid-generator-proxy-contracts", branch = "main" }
valkyrie = { git = "https://github.com/gridironzone/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
valkyrie-lp-staking = { git = "https://github.com/gridironzone/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
valkyrie-vp = { git = "https://github.com/gridironzone/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
gridiron-native-coin-registry = { path = "../../periphery/native_coin_registry" }
