[package]
name = "gridiron-incentives"
version = "1.0.0"
authors = ["Gridiron"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.3"
cw-storage-plus = "0.15"
cosmwasm-schema = "1.4"
cw2 = "1"
cw20 = "1"
cw-utils = "1"
gridiron = { path = "../../../packages/gridiron" }
thiserror = "1"
itertools = "0.11"

[dev-dependencies]
cw-multi-test = { git = "https://github.com/gridironzone/cw-multi-test", branch = "gridiron_cozy_fork" }
anyhow = "1"
gridiron-factory = { path = "../../factory" }
gridiron-pair = { path = "../../pair" }
gridiron-pair-stable = { path = "../../pair_stable" }
gridiron-native-coin-registry = { path = "../../periphery/native_coin_registry" }
gridiron-vesting = { path = "../vesting" }
cw20-base = "1"
proptest = "1.3"
