[package]
name = "gridiron-vesting"
version = "1.3.2"
authors = ["Gridiron"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
gridiron = { path = "../../../packages/gridiron", version = "3" }
thiserror = { version = "1.0" }
cw-utils = "0.15"
cosmwasm-schema = { version = "1.1", default-features = false }

[dev-dependencies]
cw-multi-test = "0.15"
gridiron-token = { path = "../../token" }
